<!--
  ~ Copyright 2017 Gurupad Mamadapur
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">CodeWatch</string>


	<!-- Related to login-->
	<string name="app_scheme">codewatch</string>
	<string name="login_text">Log in to Wakatime.com to track your coding activity</string>
	<string name="login">Login</string>
	<string name="login_failed">Login failed</string>
	<string name="setting_up">Setting up CodeWatch</string>

	<!-- Navigation items -->
	<string name="drawer_close">Close drawer</string>
	<string name="drawer_open">Open drawer</string>
	<string name="dashboard">Dashboard</string>
	<string name="goals">Goals</string>
	<string name="leaderboards">Leaderboards</string>
	<string name="achievements">Achievements</string>
	<string name="projects">Projects</string>
	<string name="settings">Settings</string>
	<string name="card_activity_header">Activity</string>

	<!-- Content descriptions -->
	<string name="CD_PROGRESS">
		You\'ve logged
		<xliff:g name="quantity" example="2">%.2f</xliff:g>%% of your daily average.
	</string>
	<string name="go_back_CD">Go back</string>
	<string name="share_the_app_CD">Share the app</string>
	<string name="app_logo_CD">App logo</string>
	<string name="wakatime_logo_CD">Wakatime logo</string>
	<string name="profile_image_CD">Profile image</string>
	<string name="share_your_coding_activity_CD">Share your coding activity</string>
	<string name="share_your_language_stats_CD">Share your language stats</string>
	<string name="share_your_editor_stats_CD">Share your editor stats</string>
	<string name="share_your_os_stats_CD">Share your os stats</string>
	<string name="expand_os_chart_details_CD">Expand os chart details</string>
	<string name="expand_editor_stats_CD">Expand editor chart details</string>
	<string name="expand_language_chart_details_CD">Expand language chart details</string>
	<string name="share_your_project_activity_CD">Share your project activity</string>


	<!-- Charts -->
	<string name="performance_title">Performance</string>
	<string name="card_languages_header">Languages</string>
	<string name="card_editors_header">Editors</string>
	<string name="card_os_header">Operating Systems</string>
	<string name="progress_description">
		<xliff:g example="70">%.2f</xliff:g>%% of daily average coded.
	</string>

	<!-- Time data string formats -->
	<string name="default_time_format">
		<xliff:g name="hours" example="7">%1$d</xliff:g>h
		<xliff:g name="minutes" example="10">%2$d</xliff:g>m
	</string>
	<string name="daily_average_format">
		Daily average -
		<xliff:g name="time" example="3h 5m">%s</xliff:g>
		<!-- above format is dependent on default_time_format-->
	</string>
	<string name="todays_log_percent_text">
		Today you logged
		<xliff:g name="quantity" example="45.32">%.2f</xliff:g>
		%% of your daily average.
	</string>
	<string name="todays_total_log_time">
		You coded for <xliff:g name="time" example="7h 5m">%s</xliff:g> today.
	</string>
	<string name="total_project_time">
		You spent <xliff:g name="time" example="7h 5m">%s</xliff:g> on this project over a week.
	</string>

	<string name="percent_format"><xliff:g name="percent">%.2f</xliff:g>%%</string>
	<string name="language_goal">
		Code in <xliff:g name="name">%1$s</xliff:g> for
		<xliff:g name="time" example="3">%2$d</xliff:g> h daily.
	</string>
	<string name="project_deadline_goal">
		Finish <xliff:g name="project_name">%1$s</xliff:g> by
		<xliff:g name="date" example="4 Jun">%2$s</xliff:g>. <!-- Don't worry date is translated -->
	</string>
	<string name="project_daily_goal">
		Spend <xliff:g name="time">%1$d</xliff:g> h on
		<xliff:g name="project_name">%2$s</xliff:g> daily.
	</string>
	<string name="hours">%dh</string>
	<string name="minutes">%d m</string>
	<string name="seconds">%ds</string>
	<string name="marker_text">
		<xliff:g name="time">%1$s</xliff:g> on
		<xliff:g name="date">%2$s</xliff:g>
	</string>

	<!-- Goals related -->
	<string name="goal">Goal</string>
	<string name="choose_goal_type">Choose goal type</string>
	<string name="choose_language">Choose language</string>
	<string name="choose_hours">Choose hours</string>
	<string name="invalid_language_hint">%s is not supported yet. Choose one among the list.</string>
	<string name="choose_project">Choose Project</string>
	<string name="finish">Finish</string>
	<string name="by">by</string>
	<string name="duplicate_goal_message">This goal is already added.</string>
	<string name="day">day</string>
	<string name="days">days</string>
	<string name="deadline_reached">Deadline reached</string>
	<string name="goal_deleted">Goal deleted</string>
	<string name="remaining_days">
		<xliff:g name="remainingDays">%1$d</xliff:g>
		<xliff:g name="day/s">%2$s</xliff:g> remaining. </string>
	<string-array name="goal_types">
		<!-- Order is important -->
		<item>Code in X language for Y hours</item>
		<item>Finish a project by X date</item>
		<item>Spend X hours in a project</item>
	</string-array>

	<!-- Actions -->
	<string name="ok">OK</string>
	<string name="retry">Retry</string>
	<string name="cancel">Cancel</string>
	<string name="delete">Delete</string>
	<string name="change_account">Change account</string>
	<string name="choose_app">Choose an app</string>
	<string name="undo">Undo</string>

	<!-- Leaderboard -->
	<string name="filter">leader_fitler</string>
	<string name="find_me">Find me</string>
	<string name="filter_by_language">Filter by language</string>
	<string name="_3">3</string>
	<string name="_1">1</string>
	<string name="_2">2</string>
	<string name="empty_leaderboard">No users using - <xliff:g name="language">%s</xliff:g>.</string>

	<!-- Projects -->
	<string name="empty_project_list">No projects found.</string>
	<string name="not_found">Not found</string>
	<string name="sort_by">Sort by</string>
	<string name="menu_sort_by_time_title">By time spent</string>
	<string name="menu_sort_by_name_title">By name</string>
	<string name="menu_search_title">Search</string>
	<string name="search_hint">Search by project name…</string>

	<!-- Achievements -->
	<string name="menu_sort_by_locked">By locked</string>
	<string name="menu_sort_by_unlocked">By unlocked</string>

	<!-- Notifications -->
	<string name="pref_notification_title">Notifications</string>
	<string name="pref_goal_reminders_title">Goal reminders</string>
	<string name="leaderboard_notification_text">
		Position <xliff:g id="rank">%1$d</xliff:g> on the leaderboard
		today with daily average of <xliff:g id="average">%2$s</xliff:g>.
	</string>
	<string name="goals_reminder">Goals reminder</string>
	<string name="finish_project_today">Finish %s today.</string>
	<string name="finish_project_within">
		Finish <xliff:g id="projectName">%1$s</xliff:g> within
		<xliff:g id="days">%2$d</xliff:g> day/s.
	</string>

	<!-- Settings -->
	<string name="pref_leaderboard_changes">Leaderboard changes</string>
	<string name="logout">Logout</string>
	<string name="about">About</string>
	<string name="developed_by">Developed by Gurupad Mamadapur</string>
	<string name="powered_by">Powered by <a href="https://wakatime.com">WakaTime</a></string>
	<string name="pref_about_key" translatable="false">about</string>
	<string name="pref_logout_key" translatable="false">logout</string>
	<string name="pref_goal_reminders_key">goal_reminder</string>
	<string name="pref_leaderboard_changes_key">pref_leaderboard_changes_key</string>

	<!-- Error messages -->
	<string name="internet_error_message">Please check your internet connection</string>
	<string name="share_error">Sorry couldn\'t share the image</string>
	<string name="confirm_mail">Please confirm you email</string>
	<string name="unknown_error_message">Unknown error occurred</string>
	<string name="stats_updating_error_message">Your stats are being calculated</string>
	<string name="new_user_error_text">
		Looks like you are new to wakatime.com \n \n
		Please install a wakatime plugin on your
		<![CDATA[<a href="https://wakatime.com/editors">favourite editors</a>]]>
		to get coding metrics, insights and much more.
	</string>


	<!-- Action bar titles -->
	<string name="settings_title">Settings</string>
	<string name="projects_title">Projects</string>
	<string name="achievements_title">Achievements</string>
	<string name="goals_title">Goals</string>
	<string name="dashboard_title">Dashboard</string>

	<!-- Update -->
	<string name="update_required">Update app</string>
	<string name="app_update_message">Please update the app in order to use the application</string>
	<string name="update">Update</string>

	<!-- AdMob id -->
	<string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>

	<string name="loading_goal_details">Loading goal details…</string>
	<string name="app_share_text">Check out CodeWatch, an awesome productivity app
		that tracks your coding activity and makes you an effective programmer! - [app link]</string>
</resources>
