<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Gurupad Mamadapur
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">

	<LinearLayout
		android:id="@+id/about_content"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/grey_900"
		android:orientation="vertical">

		<!-- Fake toolbar -->
		<FrameLayout
			android:layout_width="match_parent"
			android:layout_height="?android:attr/actionBarSize">

			<ImageButton
				android:id="@+id/up_caret"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:contentDescription="@string/go_back_CD"
				android:padding="@dimen/keyLine"
				android:src="@drawable/ic_arrow_back_white_24dp"/>

			<ImageButton
				android:id="@+id/action_share"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:contentDescription="@string/share_the_app_CD"
				android:padding="@dimen/keyLine"
				android:src="@drawable/ic_share_white_24dp"/>
		</FrameLayout>

		<ImageView
			android:layout_width="150dp"
			android:layout_height="@dimen/about_app_logo_hw"
			android:layout_gravity="center"
			android:contentDescription="@string/app_logo_CD"
			android:paddingTop="@dimen/keyLine"
			android:src="@drawable/ic_launcher_hi_res"/>

		<TextView
			style="@style/Base.TextAppearance.AppCompat.Title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="@dimen/keyLine"
			android:text="@string/app_name"
			android:textColor="@color/white_1000"/>

		<TextView
			android:id="@+id/developed_by"
			style="@style/Base.TextAppearance.AppCompat.Subhead"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="@dimen/content_spacing_normal"
			android:textColor="@color/white_1000"
			android:textStyle="italic"/>

		<android.support.v4.widget.Space
			android:layout_width="match_parent"
			android:layout_height="@dimen/content_spacing_extra_large"/>

		<TextView
			android:id="@+id/powered_by"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="center|bottom"
			android:linksClickable="true"
			android:padding="@dimen/keyLine"
			android:text="@string/powered_by"
			android:textColor="@color/white_1000"/>
	</LinearLayout>
</ScrollView>