<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:id="@+id/login_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:orientation="vertical">

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/wakatime_logo"/>

		<TextView
			style="@style/Base.TextAppearance.AppCompat.Subhead"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginEnd="64dp"
			android:layout_marginStart="64dp"
			android:gravity="center"
			android:padding="16dp"
			android:text="@string/login_text"/>

		<Button
			android:id="@+id/login"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:onClick="login"
			android:text="@string/login"/>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/setup_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center"
		android:visibility="gone"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="16dp"
			android:text="@string/setting_up"/>

		<ProgressBar
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"/>
	</LinearLayout>
</FrameLayout>