<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/card_padding"
		android:paddingEnd="@dimen/card_padding"
		android:paddingStart="@dimen/card_padding"
		android:paddingTop="@dimen/content_spacing_normal">

		<ImageView
			android:id="@+id/share_os_chart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:clickable="true"
			android:contentDescription="@string/share_your_os_stats_CD"
			android:paddingBottom="@dimen/content_spacing_normal"
			android:paddingEnd="@dimen/card_padding"
			android:paddingStart="@dimen/card_padding"
			android:paddingTop="@dimen/content_spacing_normal"
			android:src="@drawable/ic_share_white_24dp"/>


		<TextView
			android:id="@+id/title_os"
			style="@style/Base.TextAppearance.AppCompat.Title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_toLeftOf="@id/share_os_chart"
			android:layout_toStartOf="@id/share_os_chart"
			android:paddingBottom="@dimen/card_padding"
			android:paddingTop="@dimen/content_spacing_normal"
			android:text="@string/card_os_header"/>


		<com.github.mikephil.charting.charts.PieChart
			android:id="@+id/piechart_os"
			android:layout_width="match_parent"
			android:layout_height="@dimen/chart_default_height"
			android:layout_below="@id/title_os"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/piechart_os"
			android:orientation="vertical"
			android:paddingTop="@dimen/content_spacing_normal">

			<ImageView
				android:id="@+id/expand_piechart_os"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:clickable="true"
				android:contentDescription="@string/expand_os_chart_details_CD"
				android:src="@drawable/ic_expand_more_white_24dp"/>

			<android.support.v7.widget.RecyclerView
				android:id="@+id/list_os"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"/>
		</LinearLayout>
	</RelativeLayout>
</android.support.v7.widget.CardView>
