<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Gurupad Mamadapur
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/card_padding">

		<ImageView
			android:id="@+id/share_editors_chart"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_alignParentRight="true"
			android:background="?attr/selectableItemBackgroundBorderless"
			android:clickable="true"
			android:contentDescription="@string/share_your_editor_stats_CD"
			android:paddingBottom="@dimen/content_spacing_normal"
			android:src="@drawable/ic_share_white_24dp"/>

		<TextView
			android:id="@+id/title_editors"
			style="@style/Base.TextAppearance.AppCompat.Title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentLeft="true"
			android:layout_alignParentStart="true"
			android:layout_toLeftOf="@id/share_editors_chart"
			android:layout_toStartOf="@id/share_editors_chart"
			android:paddingBottom="@dimen/content_spacing_normal"
			android:text="@string/card_editors_header"/>

		<com.github.mikephil.charting.charts.PieChart
			android:id="@+id/piechart_editors"
			android:layout_width="match_parent"
			android:layout_height="@dimen/chart_default_height"
			android:layout_below="@id/title_editors"/>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/piechart_editors"
			android:orientation="vertical"
			android:paddingTop="@dimen/content_spacing_normal">

			<ImageView
				android:id="@+id/expand_piechart_editors"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center"
				android:background="?attr/selectableItemBackgroundBorderless"
				android:clickable="true"
				android:contentDescription="@string/expand_editor_stats_CD"
				android:src="@drawable/ic_expand_more_white_24dp"/>

			<android.support.v7.widget.RecyclerView
				android:id="@+id/list_editors"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:visibility="gone"/>
		</LinearLayout>
	</RelativeLayout>
</android.support.v7.widget.CardView>
