<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Gurupad Mamadapur
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:baselineAligned="false"
	android:padding="@dimen/keyLine">

	<RelativeLayout
		android:id="@+id/second"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="3"
		android:paddingTop="@dimen/non_first_rank_padding">

		<FrameLayout
			android:id="@+id/avatarContainer2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/imgAvatar2"
				android:layout_width="@dimen/non_first_rank_avatar_dimen"
				android:layout_height="@dimen/non_first_rank_avatar_dimen"
				android:layout_gravity="center"
				android:contentDescription="@string/profile_image_CD"
				android:padding="@dimen/content_spacing_normal"
				android:src="@drawable/ic_account_circle_white_24dp"/>

			<android.support.v7.widget.CardView
				android:layout_width="@dimen/rank_text_container_dimen"
				android:layout_height="@dimen/rank_text_container_dimen"
				android:layout_gravity="center|bottom"
				app:cardBackgroundColor="@color/silver">

				<!-- Purposefully setting the text size in dp instead of sp-->
				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="@dimen/rank_container_text_padding"
					android:text="@string/_2"
					android:textSize="@dimen/rank_text_size"
					android:textStyle="bold"
					tools:ignore="SpUsage"/>
			</android.support.v7.widget.CardView>
		</FrameLayout>

		<TextView
			android:id="@+id/name2"
			style="@style/Base.TextAppearance.AppCompat.Body2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/avatarContainer2"
			android:ellipsize="end"
			android:gravity="center"
			android:maxLines="1"
			android:paddingTop="@dimen/content_spacing_normal"
			tools:text="Gurupad"/>

		<TextView
			android:id="@+id/total_seconds2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/name2"
			android:fontFamily="sans-serif-condensed"
			android:gravity="center"
			android:paddingTop="@dimen/content_spacing_normal"
			tools:text="46 hrs 36 min"/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/first"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="4">

		<FrameLayout
			android:id="@+id/avatarContainer"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/avatar"
				android:layout_width="@dimen/first_rank_avatar_dimen"
				android:layout_height="@dimen/first_rank_avatar_dimen"
				android:layout_gravity="center"
				android:contentDescription="@string/profile_image_CD"
				android:padding="@dimen/content_spacing_normal"
				android:src="@drawable/ic_account_circle_white_24dp"/>

			<android.support.v7.widget.CardView
				android:layout_width="@dimen/first_rank_text_container_dimen"
				android:layout_height="@dimen/first_rank_text_container_dimen"
				android:layout_gravity="center|bottom"
				app:cardBackgroundColor="@color/gold">

				<!-- Purposefully setting the text size in dp instead of sp-->
				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="@dimen/rank_container_text_padding"
					android:text="@string/_1"
					android:textSize="@dimen/first_rank_text_size"
					android:textStyle="bold"
					tools:ignore="SpUsage"/>
			</android.support.v7.widget.CardView>
		</FrameLayout>

		<TextView
			android:id="@+id/name"
			style="@style/Base.TextAppearance.AppCompat.Subhead"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/avatarContainer"
			android:ellipsize="end"
			android:gravity="center"
			android:maxLines="1"
			android:paddingTop="@dimen/content_spacing_normal"
			tools:text="Gurupad"/>

		<TextView
			android:id="@+id/total_seconds"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/name"
			android:fontFamily="sans-serif-condensed"
			android:gravity="center"
			android:paddingTop="@dimen/content_spacing_normal"
			tools:text="46 hrs 36 min"/>
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/third"
		android:layout_width="0dp"
		android:layout_height="match_parent"
		android:layout_weight="3"
		android:paddingTop="@dimen/non_first_rank_padding">

		<FrameLayout
			android:id="@+id/avatarContainer3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<ImageView
				android:id="@+id/imgAvatar3"
				android:layout_width="@dimen/non_first_rank_avatar_dimen"
				android:layout_height="@dimen/non_first_rank_avatar_dimen"
				android:layout_gravity="center"
				android:padding="@dimen/content_spacing_normal"
				android:src="@drawable/ic_account_circle_white_24dp"/>

			<android.support.v7.widget.CardView
				android:layout_width="@dimen/rank_text_container_dimen"
				android:layout_height="@dimen/rank_text_container_dimen"
				android:layout_gravity="center|bottom"
				app:cardBackgroundColor="@color/bronze">

				<!-- Purposefully setting the text size in dp instead of sp-->
				<TextView
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:gravity="center"
					android:padding="@dimen/rank_container_text_padding"
					android:text="@string/_3"
					android:textSize="@dimen/rank_text_size"
					android:textStyle="bold"
					tools:ignore="SpUsage"/>
			</android.support.v7.widget.CardView>
		</FrameLayout>

		<TextView
			android:id="@+id/name3"
			style="@style/Base.TextAppearance.AppCompat.Body2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/avatarContainer3"
			android:ellipsize="end"
			android:gravity="center"
			android:maxLines="1"
			android:paddingTop="@dimen/content_spacing_normal"
			tools:text="Gurupad"/>

		<TextView
			android:id="@+id/total_seconds3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/name3"
			android:fontFamily="sans-serif-condensed"
			android:gravity="center"
			android:paddingTop="@dimen/content_spacing_normal"
			tools:text="46 hrs 36 min"/>
	</RelativeLayout>
</LinearLayout>